Updated error message in PerformanceObserver.observe

BUG=662210

Review-Url: https://codereview.chromium.org/2468063006
Cr-Commit-Position: refs/heads/master@{#431165}