third_party/WebKit/Source/core/timing/PerformanceObserver.cpp
@@ -50,7 +50,8 @@ void PerformanceObserver::observe(const PerformanceObserverInit& observerInit,
   }
   if (entryTypes == PerformanceEntry::Invalid) {
     exceptionState.throwTypeError(
-        "A Performance Observer MUST have a non-empty entryTypes attribute.");
+        "A Performance Observer MUST have at least one valid entryType in its "
+        "entryTypes attribute.");
     return;
   }
   m_filterOptions = entryTypes;
